# utf8

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PACKAGING.md  README.md  utf8.pc.in  utf8_facts.expected
.github/workflows/: c-cpp.yml  release.yml
cmake/: utf8Config.cmake.in
debian/: changelog  control  copyright  libutf8-1.install  libutf8-dev.install  rules
expected/: utf8_facts.out
include/: utf8.h
packaging/alpine/: APKBUILD
packaging/choco/: utf8.nuspec
packaging/choco/tools/: install.ps1
packaging/homebrew/: utf8.rb
src/: utf8.c  utf8_facts.c  utf8facts.c
